# ROS-CTborg

./: 3D printing_CTborg.rar  Model_CTborg.rar  README.md  Video_CTborg.MOV  Список компонентов ROS CTborg.xlsx
camera_tracker/: CMakeLists.txt  package.xml  setup.cfg  setup.py  tracker_launch.py
camera_tracker/camera_tracker/: tracker_node.py
dreame_lidar_driver/: package.xml  setup.cfg  setup.py
dreame_lidar_driver/dreame_lidar_driver/: lidar_node.py
esp32ros/: esp32ros.ino
lidar_navigator/: package.xml  setup.cfg  setup.py
lidar_receiver/: package.xml  setup.cfg  setup.py
lidar_receiver/lidar_receiver/: lidar_receiver_node.py
motor_controller/: setup.py
object_tracker/: package.xml  setup.py
object_tracker/object_tracker/: object_tracker.py
serial_motor_driver/: package.xml  setup.py
serial_motor_driver/serial_motor_driver/: motor_driver.py
voice_assistant/: package.xml  setup.py
